--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "nuxt": "^2.0.0",
-    "reset-css": "^5.0.1"
+    "reset-css": "^5.0.1",
+    "simplebar": "^5.3.0",
+    "vanilla-lazyload": "^17.3.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
