--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "nuxt": "^2.0.0",
     "reset-css": "^5.0.1",
     "simplebar": "^5.3.0",
-    "vanilla-lazyload": "^17.3.0"
+    "vue-lazyload": "^1.3.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
@@ -25,6 +25,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
+    "inputmask": "^5.0.5",
     "nuxt-webfontloader": "^1.1.0",
     "sass": "^1.32.4",
     "sass-loader": "^10.1.1"
